coffee-api/coffee-api-bk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-ingress
  namespace: coffee
  labels:
    app: coffee-api
spec:
  ingressClassName: nginx
  rules:
    - host: coffee.192.168.228.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coffee-api
                port:
                  number: 80
